styles/gallery.css
.gallery {
  margin-top: 100px;
  margin-bottom: 60px;
  bottom: 50px;
  padding-top: 50px;
  padding-bottom: 50px;
  padding-left: 50px;
  padding-right: 50px;
  background-color: #fbf7f0;
  border-radius: 30px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.title-gallery {
  font-family: "Golden-Plains";
  color: #b23150;
  font-size: 50px;
}

.img-thumbnail {
  cursor: pointer;
  margin-bottom: 20px;
}

.img-thumbnail:hover {
  cursor: pointer;
  opacity: .8;
}

.img-fluid {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

hr {
  border: 0;
  clear:both;
  display:block;
  width: 100%;
  background-color: #E8E8E8;
  height: 1px;
}

.fa-chevron-left,.fa-chevron-right {
  color: #9a7b3b;
  cursor: pointer;
  font-size: 50px;
  padding-top: 50%;
  opacity: 1;
}

.fa-chevron-left:hover,.fa-chevron-right:hover {
  color: #fcb728;
}

#image-gallery-caption {
  text-align: justify;
  margin-top: 10px;
}

